# retro-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.qoder/repowiki/en/content/: API Reference.md  CLI Reference.md  Development Guide.md  Getting Started.md  Project Overview.md
.qoder/repowiki/en/content/Artwork Integration/: Artwork Caching and Storage.md  Artwork Integration.md  Artwork Rendering and Display.md  Artwork Sourcing and Resolution.md  Artwork State Management.md
.qoder/repowiki/en/content/Core Architecture/: Application State Management.md  Core Architecture.md  Event-Driven Architecture.md  Input Handling System.md  Worker Thread System.md
.qoder/repowiki/en/content/Database System/: Data Operations.md  Database Schema.md  Database System.md  Migration System.md  Performance Optimization.md
.qoder/repowiki/en/content/Emulator Integration/: Configuration Management.md  Emulator Detection.md  Emulator Integration.md  Launch Mechanisms.md  Platform Support.md
.qoder/repowiki/en/content/Maintenance and Operations/: Cache Management.md  Database Maintenance.md  Maintenance and Operations.md  System Reset Procedures.md  Troubleshooting Guides.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
src/: artwork.rs  catalog.rs  cli.rs  config.rs  db.rs  emulator.rs  error.rs  launcher.rs  lib.rs  main.rs  maintenance.rs  metadata.rs  models.rs  presentation.rs  scanner.rs  terminal.rs  toast.rs  ui.rs
src/app/: events.rs  input.rs  mod.rs  state.rs  workers.rs
src/ui/: layout.rs  theme.rs
support/: starter_metadata.json
(+15 files in other folders)
