[package]
name = "retro-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Retro Launcher Contributors"]
description = "A TUI-based retro game launcher and library manager"
license = "MIT"
repository = "https://github.com/Nik-9649/retro-launcher"
homepage = "https://github.com/Nik-9649/retro-launcher"
keywords = ["retro", "games", "emulator", "launcher", "tui"]
categories = ["command-line-utilities", "games"]
rust-version = "1.70"

[[bin]]
name = "retro-launcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
directories = "5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
ratatui = "0.29"
ratatui-image = { version = "5.0.0", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
url = "2.5"
urlencoding = "2.1"
walkdir = "2.5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.15"
